--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@ for(var i = 0; i < keys.length; i++){
 				<section>
 
 					<section>
-						<h2>Memoiseation</h2>
+						<h2>Memoisation</h2>
 
 						<pre><code data-trim contenteditable>
 function isPrime(n) {
@@ -213,7 +213,7 @@ function onMouseMove(event){
 				</section>
 
 				<section>
-					<h3>Prerequisits to generate  flame charts</h3>
+					<h3>Prerequisites to generate  flame charts</h3>
 
 					<ol>
 						<li class="fragment" >Use linux ( mac is hard, windows impossibru... )</li>
